--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,5 @@ project(JellySolver)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(JellySolver main.cpp)
+add_executable(JellySolver main.cpp
+        jelly_solver.hpp)
